--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -56,18 +56,26 @@ p {
 .form-container form {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   width: 60%;
-  gap: 2rem;
+  gap: 1rem;
 }
-.form-container form input {
+.form-container form .input-container {
+  display: flex;
+  flex-direction: column;
+  width: 70%;
+  gap: 0.5rem;
+}
+.form-container form .input-container input {
   border: 2px solid rgb(8, 150, 182);
   outline: none;
   height: 3rem;
   transition: 0.3s;
   padding: 0 1rem;
 }
-.form-container form input:focus {
-  border: 2px solid orangered;
+.form-container form .input-container input:focus {
+  border: 5px solid rgb(234, 231, 231);
 }
 .form-container button {
   width: 30%;
@@ -82,4 +90,22 @@ p {
 }
 .form-container button:hover {
   background-color: orangered;
+}
+
+.error {
+  color: red;
+}
+.spinner {
+  width: 18px;
+  height: 18px;
+  border: 2px solid #fff;
+  border-top-color: transparent;
+  border-radius: 50%;
+  animation: spin 0.6s linear infinite;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
 }
