--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+
 body {
   padding: 0;
   margin: 0;
@@ -5,6 +7,7 @@ body {
   overflow-x: hidden;
   height: 100%;
   box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
 }
 .body-section {
   padding: 3rem;
